components/argo-workflows/configs/home/ingress-argo-server.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows-server
  namespace: argo-workflows
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Argo Workflows"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "argo-cd.png"
    gethomepage.dev/href: "https://argo.tail0c49c.ts.net"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - argo
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-workflows-server
                port:
                  number: 2746
